Bug 376205 - Clicking on grouped window list and then ctrl-clicking on item in task bar crashes plasmashell
Summary: Clicking on grouped window list and then ctrl-clicking on item in task bar cr...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.9.0
Platform: Neon Linux
: NOR crash
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-08 20:50 UTC by RNG
Modified: 2022-04-20 17:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RNG 2017-02-08 20:50:50 UTC
If you have a grouped window list (say, many browser windows) in the task bar and you do a (normal) click on the grouped window list the window list expands and shows the individual windows. If you then do a ctrl-click on the item in the task bar (ie: the root element of the expanded window list) plasmashell crashes.

Note: all "click" actions refer to a left mouse button click.
Comment 1 Eike Hein 2017-02-09 08:27:15 UTC
Backtrace?
Comment 2 RNG 2017-02-09 11:50:49 UTC
I'm sorry, I'm not a C/C++ dev and have no idea how/where to find the backtrace for this.
Comment 3 Eike Hein 2017-02-09 12:41:45 UTC
From the crash dialog that appears - nevermind tho, I was able to reproduce the crash and got one.
Comment 4 RNG 2017-02-09 12:43:59 UTC
OK, great that you managed to reproduce. BTW, I don't get a crash dialog when this happens.
Comment 5 Eike Hein 2017-02-09 12:48:45 UTC
I do :) Must be Neon screwing something up.
Comment 6 Eike Hein 2017-02-09 13:37:26 UTC
Patch under review: https://phabricator.kde.org/D4525
Comment 7 Eike Hein 2017-02-13 11:29:23 UTC
Git commit dc17f78ebcc76600040a8d2ef8c57b9a41a8d06e by Eike Hein.
Committed on 13/02/2017 at 10:42.
Pushed by hein into branch 'Plasma/5.9'.

Fix crash when invoking Present Windows with the group dialog open.

Summary:
This fixes a regression from aeec4ae8 which unsets the taskManagerItem
prop when the group dialog is shown to intentionally break window
highlighting while the dialog is open.

This patch instead fixes highlighting from the group dialog properly
by including it in the highlight list.

Also adds some extra crash guards.

CCMAIL:bvbfan@abv.bg
Related: bug 376234

Reviewers: #plasma, anthonyfieroni

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4525

M  +2    -0    applets/taskmanager/package/contents/ui/Task.qml
M  +2    -1    applets/taskmanager/package/contents/ui/main.qml
M  +22   -0    applets/taskmanager/plugin/backend.cpp
M  +6    -0    applets/taskmanager/plugin/backend.h

https://commits.kde.org/plasma-desktop/dc17f78ebcc76600040a8d2ef8c57b9a41a8d06e
Comment 8 Eike Hein 2017-02-13 18:01:49 UTC
Git commit 61489110c597ad4e4cb69b004d30dbda8b4110ef by Eike Hein.
Committed on 13/02/2017 at 18:01.
Pushed by hein into branch 'Plasma/5.8'.

Fix crash when invoking Present Windows with the group dialog open.

Summary:
This fixes a regression from aeec4ae8 which unsets the taskManagerItem
prop when the group dialog is shown to intentionally break window
highlighting while the dialog is open.

This patch instead fixes highlighting from the group dialog properly
by including it in the highlight list.

Also adds some extra crash guards.

CCMAIL:bvbfan@abv.bg
Related: bug 376234

Reviewers: #plasma, anthonyfieroni

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4525

M  +2    -0    applets/taskmanager/package/contents/ui/Task.qml
M  +2    -1    applets/taskmanager/package/contents/ui/main.qml
M  +22   -0    applets/taskmanager/plugin/backend.cpp
M  +6    -0    applets/taskmanager/plugin/backend.h

https://commits.kde.org/plasma-desktop/61489110c597ad4e4cb69b004d30dbda8b4110ef
Comment 9 Eike Hein 2017-02-16 13:30:35 UTC
Git commit a261ff25a580759183d20725d9f37d9ba25365ee by Eike Hein.
Committed on 16/02/2017 at 13:30.
Pushed by hein into branch 'master'.

Fix crash when invoking Present Windows with the group dialog open.

Summary:
This fixes a regression from aeec4ae8 which unsets the taskManagerItem
prop when the group dialog is shown to intentionally break window
highlighting while the dialog is open.

This patch instead fixes highlighting from the group dialog properly
by including it in the highlight list.

Also adds some extra crash guards.

CCMAIL:bvbfan@abv.bg
Related: bug 376234

Reviewers: #plasma, anthonyfieroni

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4525

M  +2    -0    applets/taskmanager/package/contents/ui/Task.qml
M  +2    -1    applets/taskmanager/package/contents/ui/main.qml
M  +22   -0    applets/taskmanager/plugin/backend.cpp
M  +6    -0    applets/taskmanager/plugin/backend.h

https://commits.kde.org/plasma-desktop/a261ff25a580759183d20725d9f37d9ba25365ee
Comment 10 Nate Graham 2022-04-20 17:59:42 UTC
Git commit 6e9a81a0291ad6bd3aeee80050ee395f266c3f33 by Nate Graham, on behalf of Fushan Wen.
Committed on 20/04/2022 at 17:56.
Pushed by ngraham into branch 'master'.

applets/taskmanager: Remove `groupDialog` property after switching to Window View

It's introduced in a261ff25a580759183d20725d9f37d9ba25365ee to fix
window highlighting, but now it's not used anywhere, so remove it.
Related: bug 376234, bug 452584

M  +0    -1    applets/taskmanager/package/contents/ui/main.qml
M  +0    -14   applets/taskmanager/plugin/backend.cpp
M  +0    -6    applets/taskmanager/plugin/backend.h

https://invent.kde.org/plasma/plasma-desktop/commit/6e9a81a0291ad6bd3aeee80050ee395f266c3f33