Fix crash when invoking Present Windows with the group dialog open.

Summary:
This fixes a regression from aeec4ae8 which unsets the taskManagerItem
prop when the group dialog is shown to intentionally break window
highlighting while the dialog is open.

This patch instead fixes highlighting from the group dialog properly
by including it in the highlight list.

Also adds some extra crash guards.

CCMAIL:bvbfan@abv.bg
BUG:376205
BUG:376234

Reviewers: #plasma, anthonyfieroni

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4525